@@ -3,7 +3,10 @@ NOTE: Specific #s below correspond to Trac tickets logged and maintained at http
 1.0.4
 - Added Russian, Persian, Arabic and other .po translations (see res/values-* folders)
 - Fixed incorrect try to clear iptables rules for non-root devices
-- Fixed bug that stopped wizard helper from showing
+- Fixed bug that stopped wizard helper from showing first time
+- Added new green notification icon when Tor is connected
+- Fixed app selector layout in settings
+- Moved minSDK to 4 (Android 1.6); discontinued 1.5 support
 
 1.0.3
 - Fixed spanish language issues with settings screen
